# 25.0_Project-structure

01_task/: CMakeLists.txt
01_task/include/: tools.h
01_task/src/: CMakeLists.txt  main.cpp
02_task/: CMakeLists.txt
02_task/include/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
02_task/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
